Add project detail API
